# terminalator

./: index.html  package.json  pnpm-lock.yaml  release.config.cjs
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  snmp_commands.rs
src/components/: ConnectionManager.tsx  FileExplorer.tsx  SettingsPanel.tsx  SystemStats.tsx  Terminal.tsx
src/components/snmp/: SnmpManager.module.css  SnmpManager.tsx  mibExporter.ts  oidRegistry.ts  snmpTypes.ts
src/components/snmp/exportModal/: ExportModal.module.css  ExportModal.tsx
src/components/snmp/minTreeExporter/: MibTreeExplorer.module.css  MibTreeExplorer.tsx
src/components/snmp/singleLeafEditor/: SingleLeafEditor.module.css  SingleLeafEditor.tsx
src/components/snmp/snmpCredentials/: SnmpCredentials.module.css  SnmpCredentials.tsx
src/components/snmp/taskOrchestrator/: TaskOrchestrator.module.css  TaskOrchestrator.tsx
src/contexts/: SettingsContext.tsx
