[package]
name = "app"
version = "0.3.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
ssh2 = { version = "0.9.5", features = ["vendored-openssl"] }
anyhow = "1.0.102"
tauri-plugin-dialog = "2.7.1"
uuid = { version = "1.20.0", features = ["v4"] }
snmp2 = { version = "0.5", features = ["crypto-rust"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
mib-rs = "0.8.0"
futures = "0.3"
bytes = "1.11.1"
